--- a/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.slides.html
+++ b/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.slides.html
@@ -13397,8 +13397,8 @@ Please note that encountering one item (the song) will result in the second item
 <span class="c1"># alter print options for numpy: suppress scientific printing </span>
 <span class="n">np</span><span class="o">.</span><span class="n">set_printoptions</span><span class="p">(</span><span class="n">suppress</span> <span class="o">=</span> <span class="kc">True</span><span class="p">)</span>
 
-<span class="n">image_florence</span>   <span class="o">=</span> <span class="p">[</span><span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">,</span> <span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">,</span> <span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">]</span>     <span class="c1"># represent image using this pattern</span>
-<span class="n">song_stand_by_me</span> <span class="o">=</span> <span class="p">[</span><span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">]</span>               <span class="c1"># represent song using this pattern</span>
+<span class="n">image_florence</span>   <span class="o">=</span> <span class="p">[</span><span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">,</span> <span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">,</span> <span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">]</span>     <span class="c1"># represents image</span>
+<span class="n">song_stand_by_me</span> <span class="o">=</span> <span class="p">[</span><span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">99</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">,</span> <span class="o">.</span><span class="mi">01</span><span class="p">]</span>               <span class="c1"># represents song</span>
 
 <span class="c1"># define a weight matrix exclusively filled with zeros</span>
 <span class="n">weight_matrix</span> <span class="o">=</span> <span class="n">delta_learning</span><span class="o">.</span><span class="n">initialise_weights</span><span class="p">(</span><span class="n">image_florence</span><span class="p">,</span> 
@@ -13805,9 +13805,7 @@ So, if we give the model the features for flower 62:</p>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># import: general and scikit-learn specific</span>
-<span class="kn">import</span> <span class="nn">itertools</span>
 <span class="kn">import</span> <span class="nn">numpy</span>                 <span class="k">as</span> <span class="nn">np</span>
-<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span>     <span class="k">as</span> <span class="nn">plt</span>
 
 <span class="kn">from</span> <span class="nn">sklearn</span>                 <span class="k">import</span> <span class="n">datasets</span>
 <span class="kn">from</span> <span class="nn">sklearn.linear_model</span>    <span class="k">import</span> <span class="n">Perceptron</span>
@@ -13868,15 +13866,14 @@ So, if we give the model the features for flower 62:</p>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># define classifier (Perceptron object from scikit-learn)</span>
-<span class="n">classification_algorithm</span> <span class="o">=</span> <span class="n">Perceptron</span><span class="p">(</span><span class="n">max_iter</span>         <span class="o">=</span> <span class="mi">1000</span><span class="p">,</span>
+<span class="n">classification_algorithm</span> <span class="o">=</span> <span class="n">Perceptron</span><span class="p">(</span><span class="n">max_iter</span>         <span class="o">=</span> <span class="mi">100</span><span class="p">,</span>
                                       <span class="n">tol</span>              <span class="o">=</span> <span class="mf">1e-3</span><span class="p">,</span>
                                       <span class="n">verbose</span>          <span class="o">=</span> <span class="mi">0</span><span class="p">,</span>
                                       <span class="n">random_state</span>     <span class="o">=</span> <span class="mi">20</span><span class="p">,</span>
                                       <span class="n">n_iter_no_change</span> <span class="o">=</span> <span class="mi">5</span><span class="p">)</span>
 
 <span class="c1"># fit (&#39;train&#39;) classifier to the training data</span>
-<span class="n">classification_algorithm</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">X_train_std</span><span class="p">,</span> 
-                             <span class="n">y_train</span><span class="p">)</span>
+<span class="n">classification_algorithm</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">X_train_std</span><span class="p">,</span> <span class="n">y_train</span><span class="p">)</span>
 
 <span class="c1"># predict y based on x for the test data</span>
 <span class="n">y_pred</span> <span class="o">=</span> <span class="n">classification_algorithm</span><span class="o">.</span><span class="n">predict</span><span class="p">(</span><span class="n">X_test_std</span><span class="p">)</span>
