--- a/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.slides.html
+++ b/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.slides.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13069,45 +13068,6 @@ ul.typeahead-list  > li > a.pull-right {
 .highlight .vm { color: #19177C } /* Name.Variable.Magic */
 .highlight .il { color: #666666 } /* Literal.Number.Integer.Long */
     </style>
-<style type="text/css">
-    
-/* Temporary definitions which will become obsolete with Notebook release 5.0 */
-.ansi-black-fg { color: #3E424D; }
-.ansi-black-bg { background-color: #3E424D; }
-.ansi-black-intense-fg { color: #282C36; }
-.ansi-black-intense-bg { background-color: #282C36; }
-.ansi-red-fg { color: #E75C58; }
-.ansi-red-bg { background-color: #E75C58; }
-.ansi-red-intense-fg { color: #B22B31; }
-.ansi-red-intense-bg { background-color: #B22B31; }
-.ansi-green-fg { color: #00A250; }
-.ansi-green-bg { background-color: #00A250; }
-.ansi-green-intense-fg { color: #007427; }
-.ansi-green-intense-bg { background-color: #007427; }
-.ansi-yellow-fg { color: #DDB62B; }
-.ansi-yellow-bg { background-color: #DDB62B; }
-.ansi-yellow-intense-fg { color: #B27D12; }
-.ansi-yellow-intense-bg { background-color: #B27D12; }
-.ansi-blue-fg { color: #208FFB; }
-.ansi-blue-bg { background-color: #208FFB; }
-.ansi-blue-intense-fg { color: #0065CA; }
-.ansi-blue-intense-bg { background-color: #0065CA; }
-.ansi-magenta-fg { color: #D160C4; }
-.ansi-magenta-bg { background-color: #D160C4; }
-.ansi-magenta-intense-fg { color: #A03196; }
-.ansi-magenta-intense-bg { background-color: #A03196; }
-.ansi-cyan-fg { color: #60C6C8; }
-.ansi-cyan-bg { background-color: #60C6C8; }
-.ansi-cyan-intense-fg { color: #258F8F; }
-.ansi-cyan-intense-bg { background-color: #258F8F; }
-.ansi-white-fg { color: #C5C1B4; }
-.ansi-white-bg { background-color: #C5C1B4; }
-.ansi-white-intense-fg { color: #A1A6B2; }
-.ansi-white-intense-bg { background-color: #A1A6B2; }
-
-.ansi-bold { font-weight: bold; }
-
-    </style>
 
 
 <style type="text/css">
@@ -13275,8 +13235,29 @@ Pieter Huycke</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="The-delta-rule">The delta rule<a class="anchor-link" href="#The-delta-rule">&#182;</a></h2><p>Information will be addded soon</p>
+<h2 id="The-delta-rule">The delta rule<a class="anchor-link" href="#The-delta-rule">&#182;</a></h2><p>In the last theoretical lesson, we considered the mean squared error (MSE) function, which has the following form:</p>
+$$E = \frac{1}{n} \sum_{i=1}^{n} (t_{i} - y_{i})^2$$<p>where $t_{i}$ are the values provided by the supervisor.<br>
+Hence, this type of learning belongs to the category of <strong>supervised learning</strong>.<br>
+Recall that minimizing this function is straightforward: we have to minimize the difference between the predicted values $y_{i}$ and the 'required' values $t_{i}$.</p>
 
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="The-delta-rule">The delta rule<a class="anchor-link" href="#The-delta-rule">&#182;</a></h2><p>We apply gradient descent in weight space, resulting in the following equation:</p>
+$$\Delta w = - \beta \frac{\partial E}{\partial w_{ij}}$$<p>Mind that the notation $\frac{\partial f(x,y)}{\partial y}$ refers to the partial derivative of the function $f(x,y)$ with respect to variable $y$.</p>
+
+</div>
+</div>
+</div></section><section>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="The-delta-rule">The delta rule<a class="anchor-link" href="#The-delta-rule">&#182;</a></h2><p>Working out this equation algebraically brings us to the following equation:</p>
+$$\Delta w_{ij} = \beta_{j} (t_{i} - y_{i}) \frac{\partial}{\partial in_{i}} f(in_{i})$$<p>Which can be simplified if we use the linear activation function to:</p>
+$$\Delta w_{ij} = \beta_{j} (t_{i} - y_{i})$$
 </div>
 </div>
 </div></section></section><section><section>
