--- a/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.slides.html
+++ b/AY 2019 - 2020/Lesson 06/Practical session/course examples/Les 06.slides.html
@@ -13246,8 +13246,8 @@ Recall that minimizing this function is straightforward: we have to minimize the
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="The-delta-rule">The delta rule<a class="anchor-link" href="#The-delta-rule">&#182;</a></h2><p>We apply gradient descent in weight space, resulting in the following equation:</p>
-$$\Delta w = - \beta \frac{\partial E}{\partial w_{ij}}$$<p>Mind that the notation $\frac{\partial f(x,y)}{\partial y}$ refers to the partial derivative of the function $f(x,y)$ with respect to variable $y$.</p>
+<h2 id="The-delta-rule">The delta rule<a class="anchor-link" href="#The-delta-rule">&#182;</a></h2><p>We apply gradient descent in weight space, expressed mathematically using the following equation:</p>
+$$\Delta w_{ij} = - \beta \frac{\partial E}{\partial w_{ij}}$$<p>Mind that the notation $\frac{\partial f(x,y)}{\partial y}$ refers to the partial derivative of the function $f(x,y)$ with respect to variable $y$.</p>
 
 </div>
 </div>
@@ -13579,7 +13579,7 @@ Thus, the sound will elicit the screaming even though no shock was administered.
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="The-blocking-effect">The blocking effect<a class="anchor-link" href="#The-blocking-effect">&#182;</a></h2><p>Now we do extra conditiong, but we show CS1 together with a <strong>second conditioned stimulus (CS2)</strong> (e.g. a strong light).<br>
+<h2 id="The-blocking-effect">The blocking effect<a class="anchor-link" href="#The-blocking-effect">&#182;</a></h2><p>Now we do extra conditioning, but we show CS1 together with a <strong>second conditioned stimulus (CS2)</strong> (e.g. a strong light).<br>
 After conditioning, CS1 + CS2 will also lead to confused screaming:</p>
 <p><img src="./CS1_CS2_US.jpg" alt="CS1 + CS2 + US"></p>
 
@@ -13607,7 +13607,7 @@ The questions asked below might help you out.</p>
 <li>How many units does your model need?<ul>
 <li>Input layer<ul>
 <li>The model can encounter two different stimuli: <strong>only sound</strong> and <strong>sound + light</strong></li>
-<li>Sound and light can be seen as two different units: if the unit is switched of, the stimulus is not available</li>
+<li>Sound and light can be seen as two different units: if the unit is switched off, the stimulus is not available</li>
 </ul>
 </li>
 <li>Output layer<ul>
@@ -13626,8 +13626,8 @@ The questions asked below might help you out.</p>
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Modelling-the-blocking-effect">Modelling the blocking effect<a class="anchor-link" href="#Modelling-the-blocking-effect">&#182;</a></h2><ul>
 <li>Make a weight matrix to start with</li>
-<li>Use delta learning to learn the <strong>CS1 - US association</strong></li>
-<li>Use delta learning to learn the <strong>CS2 - US association</strong><ul>
+<li>Use delta learning to learn the outcome associated with <strong>CS1</strong></li>
+<li>Use delta learning to learn the outcome associated with <strong>CS1 + CS2</strong><ul>
 <li>Importantly, make sure that you use the weight matrix obtained from the previous step as a starting point</li>
 </ul>
 </li>
@@ -13766,7 +13766,7 @@ So, if we give the model the features for flower 62:</p>
 <li>i.e. there are no layers between the input- and the output layer   </li>
 </ul>
 </li>
-<li>Split the data in a training set and a testing set, use the training set to optimize the model, use the test set to check the performance of your model<ul>
+<li>Split the data in a training set and a testing set, use the training set to train the model, use the test set to check the performance of your model<ul>
 <li>Google <em>split data train test scikit learn</em>, and see which Python functions might help you out 🌐     </li>
 </ul>
 </li>
